header: updated background and font color, flex positioning, button styling. Solved double scroll bar issue.

--- a/styles/sass/partials/_baseStyles.scss
+++ b/styles/sass/partials/_baseStyles.scss
@@ -2,8 +2,10 @@ html,
 body {
     overflow-x: hidden;
 }
+
 body {
     position: relative;
+    overflow-y: hidden;
 }
 
 .wrapper {
