--- a/styles/styles.css
+++ b/styles/styles.css
@@ -240,11 +240,25 @@ html {
 }
 
 body {
-  line-height: 28px;
-  letter-spacing: 1px;
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   color: #212529;
+}
+
+.header .textContainer {
+  text-align: center;
+}
+.header .textContainer h1 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  color: #FFF;
+  font-size: 65px;
+  font-size: 3.25rem;
+}
+.header .textContainer p {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  color: #FFF;
 }
 
 html,
@@ -254,6 +268,7 @@ body {
 
 body {
   position: relative;
+  overflow-y: hidden;
 }
 
 .wrapper {
@@ -266,4 +281,25 @@ ul {
   list-style: none;
   padding: 0;
   margin: 0;
+}
+
+.header {
+  background-color: #252f43;
+  height: 100vh;
+}
+.header .flexContainer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.header button {
+  padding: 15px 20px;
+  border: none;
 }
